# IoT-PoC

./: .gitignore  ROUTES.md
backend/iot_server/: .env  Cargo.toml
backend/iot_server/src/: error.rs  error_macro.rs  main.rs  models.rs  prelude.rs  settings.rs  urls.rs
backend/iot_server/src/handlers/: lamp_handler.rs  mod.rs
backend/iot_server/src/request_response_data/: request_data.rs
backend/iot_server/src/tradfri/: mod.rs  tradfri_messages.rs  tradfri_server.rs
backend/iot_server/src/websocket/: messages.rs  mod.rs  ws_server.rs  ws_session.rs
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.ts  app.module.ts  http.service.ts  message.service.ts
frontend/src/app/components/home/: home.component.html  home.component.scss
frontend/src/app/components/home/header/: header.component.html  header.component.scss  header.component.ts
frontend/src/app/components/home/lamps/: lamps.component.html  lamps.component.scss  lamps.component.ts
frontend/src/app/components/home/lamps/lamp/: lamp.component.html  lamp.component.scss  lamp.component.ts
frontend/src/app/components/home/scenes/: scenes.component.html  scenes.component.scss  scenes.component.ts
frontend/src/app/models/: lamp.ts  scene.ts  ws.ts
frontend/src/app/shared/: lamps.service.ts  scenes.service.ts  temperature.service.ts
