[package]
name = "iot_server"
version = "0.1.0"
authors = ["Martin Linhard <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap= {git = "https://github.com/FOEX-IoT/coap-rs"}
actix-web = "2"
actix-rt = "1"
actix = "0.9"
actix-web-actors = "2"
env_logger = "0.7"
rand = "0.7"
