[package]
name = "iot_server"
version = "0.1.0"
authors = ["Martin Linhard <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap= {git = "https://github.com/FOEX-IoT/coap-rs"}
actix-web = "3"
actix = "0.10"
actix-web-actors = "3"
env_logger = "0.7"
rand = "0.7"

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.44"

derive_more = "0.99"